--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-English--Spanish
+English--Italian
 
 You need apertium-3.0 and lttoolbox-3.0 to use this translator.  To compile
 the linguistic data simply do:
