no need for the fixme

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,7 +3,7 @@ Data original to apertium-en-it:
 (c) 2010 Pasquale Minervini
 
 Some entries in the transfer lexicon were provided by Vox Humanitatis for
-Parley: (FIXME)
+Parley.
 
 Much of this package is based on data from the apertium-en-es and 
 apertium-es-it packages:
